# libexif-testsuite

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  build-config.sh  build-config.txt  configure.ac
m4/: Makefile.am  gp-byteorder.m4  stdint.m4
po/: POTFILES.in  de.po
src/: .gitignore  Makefile.am
testlib/: Makefile.am  testlib.c
tests/: .gitignore  Makefile.am  check-1054321.in  check-1054321.sh  check-1054322.in  check-1054322.sh  check-1054323.in  check-1054323.sh  check-1169170.in  check-1169170.sh  check-3434540.sh  check-3434545.sh  check-994706.b.patch  check-994706.in  check-994706.sh  check-add-tags.sh  check-all-mandatory-tags.sh  check-bid37022.sh  check-create-tags.sh  check-cve-2012-2812.sh  check-cve-2012-2813.sh  check-cve-2012-2814.sh  check-exif-executable.in  check-exif-executable.sh  check-fixup.sh  check-general-images.in  check-general-images.sh  check-init-mandatory-tags.sh  check-mnote-count.sh  check-no-unknown-tags.sh  check-output.sh  check-readwrite-identity-nofixup.sh  check-readwrite-identity.sh  check-remove-tags.sh  check-tag-description.sh  check-vars.sh.in  check-write-fail.sh  image-info.sh
tests/images/: Makefile.am
